--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -1,14 +1,25 @@
+<!-- res/layout/activity_web_view.xml -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/pipButton"
+    <!-- YouTube Player View -->
+    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+        android:id="@+id/youtubePlayerView"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:contentDescription="@string/todo"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_launcher_background"
-        />
+        android:visibility="gone"
+        android:layout_weight="1" />
+
+    <!-- Button to trigger Floating Window -->
+    <Button
+        android:id="@+id/pipButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter Floating Window"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/youtubePlayerView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
