--- a/app/src/main/res/layout/floatng_window.xml
+++ b/app/src/main/res/layout/floatng_window.xml
@@ -1,11 +1,11 @@
-<!-- res/layout/floating_player.xml -->
+<!-- res/layout/floating_window.xml -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtubePlayerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="300dp"
+        android:layout_height="200dp" />
 
 </FrameLayout>
