--- a/app/src/main/res/layout/floatng_window.xml
+++ b/app/src/main/res/layout/floatng_window.xml
@@ -1,11 +1,30 @@
 <!-- res/layout/floating_window.xml -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
         android:id="@+id/youtubePlayerView"
         android:layout_width="300dp"
-        android:layout_height="200dp" />
+        android:layout_height="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
+    <ImageView
+        android:id="@+id/customStopButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_cancel"
+        android:layout_margin="5dp"
+        android:contentDescription="@string/cancelbtn"
+        app:layout_constraintTop_toTopOf="@id/youtubePlayerView"
+        app:layout_constraintEnd_toEndOf="@id/youtubePlayerView"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
