--- a/app/src/main/res/drawable/ic_cancel.xml
+++ b/app/src/main/res/drawable/ic_cancel.xml
@@ -1,11 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="25dp"
-    android:height="25dp"
-    android:viewportWidth="32"
-    android:viewportHeight="32">
-  <path
-      android:strokeWidth="1"
-      android:pathData="M19.587,16.001l6.096,6.096c0.396,0.396 0.396,1.039 0,1.435l-2.151,2.151c-0.396,0.396 -1.038,0.396 -1.435,0l-6.097,-6.096 -6.097,6.096c-0.396,0.396 -1.038,0.396 -1.434,0l-2.152,-2.151c-0.396,-0.396 -0.396,-1.038 0,-1.435l6.097,-6.096 -6.097,-6.097c-0.396,-0.396 -0.396,-1.039 0,-1.435l2.153,-2.151c0.396,-0.396 1.038,-0.396 1.434,0l6.096,6.097 6.097,-6.097c0.396,-0.396 1.038,-0.396 1.435,0l2.151,2.152c0.396,0.396 0.396,1.038 0,1.435l-6.096,6.096z"
-      android:fillColor="#ffffff"
-      android:strokeColor="#ffffff"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="20dp" android:viewportHeight="512" android:viewportWidth="512" android:width="20dp">
+      
+    <path android:fillColor="#ffffff" android:fillType="evenOdd" android:pathData="M420.48,121.81l-30.29,-30.29l-134.19,134.4l-134.19,-134.4l-30.29,30.29l134.4,134.19l-134.4,134.19l30.29,30.29l134.19,-134.4l134.19,134.4l30.29,-30.29l-134.4,-134.19z" android:strokeColor="#00000000" android:strokeWidth="1"/>
+    
 </vector>
